Fix footer to the bottom of the page regardless of the amount of content, by wrapping the content block in a container div and setting the container size to 100vh.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,15 +1,21 @@
-/* This section copied from the Boutique Ado project. */
+/* This section copied and adapted from the Boutique Ado project. */
 
 html {
-    height: 100%
+    height: 100%;
+    overflow-x: hidden;
 }
 
 body {
     background: url(/media/hero_image.jpg) no-repeat center center fixed;
-    background-size: cover;
+    background-size: cover; 
     height: calc(100vh - 164px);
     color: #000;
     font-family: 'Open Sans', sans-serif; 
+    position: relative;
+}
+
+#content {
+    height: calc(100vh - 164px);
 }
 
 /* from Bulma */
@@ -292,6 +298,9 @@ input[name='q']::placeholder {
     position: static;
     background-color: #000;
     color: #D4AF37;
+    bottom:0;
+    left:0;
+    width:100%;
 }
 
 .footer-hr, .header-hr {
